tests/semantic_cases/valid/typed_formal_params_var_mode.ob0
MODULE Main;
VAR x;
PROCEDURE Bump(VAR target: INTEGER; amount: INTEGER);
BEGIN
  target := target + amount
END Bump;
BEGIN
  x := 1;
  Bump(x, 2)
END Main.
