tests/semantic_cases/invalid/operator_not_requires_boolean.ob0
(* INVALID: unary '~' requires a BOOLEAN operand, not INTEGER literal *)
MODULE Main;
VAR b: BOOLEAN;
BEGIN
  b := ~1
END Main.
